[package]
name = "swagger-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
maplit = "1.0.2"
clokwerk = "0.3.5"
anyhow = "1.0.44"
glob = "0.3.0"
itertools = "0.10.3"
walkdir = "2.3.2"
http = "0.2.6"